<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arkaplan"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="50"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/oyunAdi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="1dp"

            android:layout_marginTop="90dp"
            android:layout_marginRight="1dp"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/oyunAdi2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="1dp"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adini_yaz_txt"
            android:textColor="@color/beyaz"
            android:textSize="18dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/adiniYaz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/butonmavi"
                android:hint="@string/adini_yaz_edt"
                android:padding="15dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"

                android:orientation="horizontal">

                <Button
                    android:id="@+id/devamEtBtn"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/butonturuncu"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:padding="3dp"
                    android:paddingBottom="5dp"
                    android:text="Yeni Oyun"
                    android:textAllCaps="false"
                    android:textColor="@color/lacivert"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/resumeGameBtn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/butonturuncu"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:padding="5dp"
                    android:paddingBottom="10dp"
                    android:text="Oyuna\nDevam Et"
                    android:textAllCaps="false"
                    android:textColor="@color/lacivert"
                    android:textSize="24sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/yuksekPuanlarBtn"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/butonpembe"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="5dp"
                    android:paddingBottom="10dp"
                    android:text="@string/yuksek_skorlar"
                    android:textAllCaps="false"
                    android:textColor="@color/soluklacivert"
                    android:textSize="15dp" />

                <Button
                    android:id="@+id/oyunuSifirlaBtn"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/butonpembe"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="5dp"
                    android:paddingBottom="10dp"
                    android:text="@string/oyunu_sifirla"
                    android:textAllCaps="false"
                    android:textColor="@color/soluklacivert"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>